	* Backwards incompatible change to 'ComponentId' (#3917):
	  'ComponentId' is now opaque; conversion to/from 'String' now works
	  via 'unComponentId' and 'mkComponentId' functions.
	* Backwards incompatible change to 'AbiHash' (#3921):
	  'AbiHash' is now opaque; conversion to/from 'String' now works
	  via 'unAbiHash' and 'mkAbiHash' functions.
	* Backwards incompatible change to 'Version' (#3905):
	  Version is now opaque; conversion to/from '[Int]' now works
	  via 'versionNumbers' and 'mkVersion' functions.
	* Add support for `--allow-older` (dual to `--allow-newer`) (#3466)
	* Improved an error message for process output decoding errors
	(#3408).
	* 'getComponentLocalBuildInfo', 'withComponentsInBuildOrder'
	  and 'componentsInBuildOrder' are deprecated in favor of a
	  new interface in "Distribution.Types.LocalBuildInfo".
	* New 'autogen-modules' field. Modules that are built automatically at
	  setup, like Paths_PACKAGENAME or others created with a build-type
	  custom, appear on 'other-modules' for the Library, Executable,
	  Test-Suite or Benchmark stanzas or also on 'exposed-modules' for
	  libraries but are not really on the package when distributed. This
	  makes commands like sdist fail because the file is not found, so with
	  this new field modules that appear there are treated the same way as
	  Paths_PACKAGENAME was and there is no need to create complex build
	  hooks. Just add the module names on 'other-modules' and
	  'exposed-modules' as always and on the new 'autogen-modules' besides.
	(#3656).
	* New './Setup configure' flag '--cabal-file', allowing multiple
	.cabal files in a single directory (#3553). Primarily intended for
	internal use.
	* Macros in 'cabal_macros.h' are now ifndef'd, so that they
	don't cause an error if the macro is already defined. (#3041)
	* './Setup configure' now accepts a single argument specifying
	  the component to be configured.  The semantics of this mode
	  of operation are described in