@@ -747,14 +747,14 @@ data PackageProblem = DuplicateFlag PD.FlagName
                     | InvalidDep    Dependency PackageId
 
 showPackageProblem :: PackageProblem -> String
-showPackageProblem (DuplicateFlag (PD.FlagName flag)) =
-  "duplicate flag in the flag assignment: " ++ flag
+showPackageProblem (DuplicateFlag flag) =
+  "duplicate flag in the flag assignment: " ++ PD.unFlagName flag
 
-showPackageProblem (MissingFlag (PD.FlagName flag)) =
-  "missing an assignment for the flag: " ++ flag
+showPackageProblem (MissingFlag flag) =
+  "missing an assignment for the flag: " ++ PD.unFlagName flag
 
-showPackageProblem (ExtraFlag (PD.FlagName flag)) =
-  "extra flag given that is not used by the package: " ++ flag
+showPackageProblem (ExtraFlag flag) =
+  "extra flag given that is not used by the package: " ++ PD.unFlagName flag
 
 showPackageProblem (DuplicateDeps pkgids) =
      "duplicate packages specified as selected dependencies: "
