@@ -55,6 +55,9 @@
 	* Backwards incompatible change to 'AbiHash' (#3921):
 	  'AbiHash' is now opaque; conversion to/from 'String' now works
 	  via 'unAbiHash' and 'mkAbiHash' functions.
+	* Backwards incompatible change to 'FlagName' (#xxxx):
+	  'FlagName' is now opaque; conversion to/from 'String' now works
+	  via 'unFlagName' and 'mkFlagName' functions.
 	* Backwards incompatible change to 'Version' (#3905):
 	  Version is now opaque; conversion to/from '[Int]' now works
 	  via 'versionNumbers' and 'mkVersion' functions.
